force-app/main/default/objects/TimelineChild__mdt/TimelineChild__mdt.object-meta.xml
<CustomObject>
    <label>Timeline Child</label>
    <pluralLabel>Timeline Children</pluralLabel>
</CustomObject>