force-app/main/default/objects/TimelineChild__mdt/fields/AllowAutoOpen__c.field-meta.xml
<CustomField>
    <fullName>AllowAutoOpen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should the child be allowed to be opened by the &quot;Amount of items to open&quot; setting in the timeline LWC?</description>
    <inlineHelpText>Should the child be allowed to be opened by the &quot;Amount of items to open&quot; setting in the timeline LWC?</inlineHelpText>
    <label>Allow Auto Open</label>
    <type>Checkbox</type>
</CustomField>