force-app/main/default/objects/TimelineChild__mdt/fields/AutomaticRefresh__c.field-meta.xml
<CustomField>
    <fullName>AutomaticRefresh__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will cause the timeline to refresh all data, if the user creates a new record of this child type.</description>
    <inlineHelpText>Will cause the timeline to refresh all data, if the user creates a new record of this child type.</inlineHelpText>
    <label>Automatic Refresh</label>
    <type>Checkbox</type>
</CustomField>