force-app/main/default/objects/TimelineChild__mdt/fields/AutomaticRefresh_PushTopicName__c.field-meta.xml
<CustomField>
    <fullName>AutomaticRefresh_PushTopicName__c</fullName>
    <description>Add the push topic name given, so that the Timeline component subscribes to that push topic for all new records the user created (to refresh).</description>
    <inlineHelpText>Add the push topic name given, so that the Timeline component subscribes to that push topic for all new records the user created (to refresh).</inlineHelpText>
    <label>Automatic Refresh - Push Topic Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>