force-app/main/default/objects/TimelineChild__mdt/fields/ClampLines__c.field-meta.xml
<CustomField>
    <fullName>ClampLines__c</fullName>
    <description>Determines the amount of lines to show in the overriden subtitle, only used in
        Slick design</description>
    <inlineHelpText>Determines the amount of lines to show in the overriden subtitle, only used in
        Slick design</inlineHelpText>
    <label>Clamp Lines</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>