force-app/main/default/objects/TimelineChild__mdt/fields/CreateableObject_Field5__c.field-meta.xml
<CustomField>
    <fullName>CreateableObject_Field5__c</fullName>
    <description>SObject Field, e.g., &quot;Type&quot;, &quot;Custom__c&quot;, that will be
        auto-filled when creating new record of this object and type.</description>
    <inlineHelpText>SObject Field, e.g., &quot;Type&quot;, &quot;Custom__c&quot;, that will be
        auto-filled when creating new record of this object and type.</inlineHelpText>
    <label>Creatable Object - Field 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>