force-app/main/default/objects/TimelineChild__mdt/fields/CreateableObject_TextNorwegian__c.field-meta.xml
<CustomField>
	<fullName>CreateableObject_TextNorwegian__c</fullName>
	<description>E.g., &quot;Log a Call&quot;, &quot;Opportunity&quot;, &quot;Event&quot;</description>
	<inlineHelpText>E.g., &quot;Log a Call&quot;, &quot;Opportunity&quot;, &quot;Event&quot;</inlineHelpText>
	<label>Creatable Object - Text (Norwegian)</label>
	<length>255</length>
	<type>Text</type>
</CustomField>