force-app/main/default/objects/TimelineChild__mdt/fields/CreateableObject_Value4__c.field-meta.xml
<CustomField>
    <fullName>CreateableObject_Value4__c</fullName>
    <description>SObject field value, e.g., Type: &quot;Call&quot;, Custom__c: &quot;XYZ&quot;, that
        will be auto-filled when creating new record of this object and type.</description>
    <inlineHelpText>SObject field value, e.g., Type: &quot;Call&quot;, Custom__c: &quot;XYZ&quot;,
        that will be auto-filled when creating new record of this object and type.</inlineHelpText>
    <label>Creatable Object - Value 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>