force-app/main/default/objects/TimelineChild__mdt/fields/CustomComponent__c.field-meta.xml
<CustomField>
    <fullName>CustomComponent__c</fullName>
    <label>Custom Component</label>
    <length>30</length>
    <type>Text</type>
</CustomField>