force-app/main/default/objects/TimelineChild__mdt/fields/CustomView__c.field-meta.xml
<CustomField>
    <fullName>CustomView__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use custom view for this child</description>
    <label>Custom View</label>
    <type>Checkbox</type>
</CustomField>