force-app/main/default/objects/TimelineChild__mdt/fields/ExpandedFieldsToDisplay__c.field-meta.xml
<CustomField>
    <fullName>ExpandedFieldsToDisplay__c</fullName>
    <description>Comma separated list og field API names to display from the record.</description>
    <inlineHelpText>Comma separated list og field API names to display from the record.</inlineHelpText>
    <label>Expanded Fields To Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>