force-app/main/default/objects/TimelineChild__mdt/fields/Filter_Shown__c.field-meta.xml
<CustomField>
    <fullName>Filter_Shown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filter shown</label>
    <type>Checkbox</type>
</CustomField>