force-app/main/default/objects/TimelineChild__mdt/fields/FilterableCheckbox__c.field-meta.xml
<CustomField>
    <fullName>FilterableCheckbox__c</fullName>
    <description>API Name of the field to use for populating the checkbox options. The checkbox filter will be hidden if left blank.</description>
    <inlineHelpText>API Name of the field to use for populating the checkbox options. The checkbox filter will be hidden if left blank.</inlineHelpText>
    <label>Filterable Checkbox</label>
    <length>50</length>
    <type>Text</type>
</CustomField>