force-app/main/default/objects/TimelineChild__mdt/fields/FilterablePicklist2__c.field-meta.xml
<CustomField>
    <fullName>FilterablePicklist2__c</fullName>
    <description>API Name of the field to use for populating the picklist values. This picklist filter will be hidden if left blank.</description>
    <inlineHelpText>API Name of the field to use for populating the picklist values. This picklist filter will be hidden if left blank.</inlineHelpText>
    <label>Filterable Picklist- 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>