force-app/main/default/objects/TimelineChild__mdt/fields/SLDS_Dropdown_Icon__c.field-meta.xml
<CustomField>
	<fullName>SLDS_Dropdown_Icon__c</fullName>
	<description
    >Used for the create record dropdown menu. Should use utility SLDS icons. See lightningdesignsystem.com/icons. Format &#39;category:icon&#39;.</description>
	<inlineHelpText
    >Used for the create record dropdown menu. Should use utility SLDS icons. See lightningdesignsystem.com/icons. Format &#39;category:icon&#39;.</inlineHelpText>
	<label>Dropdown Icon (SLDS)</label>
	<length>255</length>
	<type>Text</type>
</CustomField>