force-app/main/default/objects/TimelineChild__mdt/fields/SLDS_Icon__c.field-meta.xml
<CustomField>
	<fullName>SLDS_Icon__c</fullName>
	<description>See lightningdesignsystem.com/icons. Format is &quot;category:icon&quot;.</description>
	<inlineHelpText>See lightningdesignsystem.com/icons. Format is &quot;category:icon&quot;. or any text field</inlineHelpText>
	<label>Icon (SLDS)</label>
	<length>255</length>
	<required>true</required>
	<type>Text</type>
</CustomField>