force-app/main/default/objects/TimelineChild__mdt/fields/Slick_background_color__c.field-meta.xml
<CustomField>
    <fullName>Slick_background_color__c</fullName>
    <label>Slick background color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>