force-app/main/default/objects/TimelineChild__mdt/fields/Slick_Icon_Color__c.field-meta.xml
<CustomField>
    <fullName>Slick_Icon_Color__c</fullName>
    <label>Slick Icon Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>