force-app/main/default/objects/TimelineChild__mdt/fields/SObjectDateFieldIsDate__c.field-meta.xml
<CustomField>
	<fullName>SObjectDateFieldIsDate__c</fullName>
	<defaultValue>false</defaultValue>
	<description>Check for date, unchecked for DateTime</description>
	<inlineHelpText>Check for date, unchecked for DateTime</inlineHelpText>
	<label>Date Field is Date</label>
	<type>Checkbox</type>
</CustomField>