force-app/main/default/objects/TimelineChild__mdt/fields/SObjectSubtitle__c.field-meta.xml
<CustomField>
    <fullName>SObjectSubtitle__c</fullName>
    <label>SObjectSubtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>