force-app/main/default/objects/TimelineChild__mdt/fields/SubtitleFutureEnglish__c.field-meta.xml
<CustomField>
	<fullName>SubtitleFutureEnglish__c</fullName>
	<description
    >Written as, e.g., &#39;scheduled a call&#39;. The assignee or owner is prepended and any related contacts are appended to the string. Empty to remove.

- If &#39;SObject - Assignee Id&#39; is configured, the name is prepended
- If &#39;SObject - Related User Id&#39; is configured, the name is appended</description>
	<inlineHelpText>Written as, e.g., &#39;scheduled a call&#39;.

- If &#39;SObject - Assignee Id&#39; is configured, the name is prepended
- If &#39;SObject - Related User Id&#39; is configured, the name is appended</inlineHelpText>
	<label>Future Tense - English</label>
	<length>255</length>
	<type>Text</type>
</CustomField>