force-app/main/default/objects/TimelineChild__mdt/validationRules/Must_add_push_topic_name_if_enabled.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_add_push_topic_name_if_enabled</fullName>
    <active>true</active>
    <errorConditionFormula>AutomaticRefresh__c &amp;&amp; ISBLANK( AutomaticRefresh_PushTopicName__c )</errorConditionFormula>
    <errorDisplayField>AutomaticRefresh_PushTopicName__c</errorDisplayField>
    <errorMessage>Must add a push topic name if automatic refresh is enabled.</errorMessage>
</ValidationRule>